# whisper-plus

./: .gitignore  COMMUNITY_IMPROVEMENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  PUSHED_TO_GITHUB.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  WEB_INTERFACE_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
tests/: __init__.py
web/: README.md  index.html  package.json  vite.config.js
web/src/: App.jsx
web/src/components/: FileUpload.jsx  Header.jsx  ProgressBar.jsx  SettingsPanel.jsx  TranscriptionViewer.jsx
web/src/styles/: index.css
whisper_plus/: __init__.py
whisper_plus/api/: __init__.py  server.py
whisper_plus/async_ops/: __init__.py
whisper_plus/batch/: __init__.py
whisper_plus/cli/: __init__.py
whisper_plus/core/: __init__.py  bindings.py  model.py  result.py
whisper_plus/utils/: __init__.py
whisper_plus/websocket/: __init__.py
whisper_plus/workflows/: __init__.py
