[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-plus"
version = "0.1.0"
description = "Enhanced Python wrapper for whisper.cpp with REST API, async processing, and batch operations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["whisper", "speech-recognition", "transcription", "ai", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]
cli = [
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "yt-dlp>=2023.11.0",
]
all = [
    "whisper-plus[api,cli]",
]

[project.scripts]
whisper-plus = "whisper_plus.cli.main:main"
whisper-plus-api = "whisper_plus.api.server:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/whisper-plus"
Documentation = "https://github.com/YOUR_USERNAME/whisper-plus#readme"
Repository = "https://github.com/YOUR_USERNAME/whisper-plus"
Issues = "https://github.com/YOUR_USERNAME/whisper-plus/issues"

[tool.setuptools]
packages = ["whisper_plus"]

[tool.setuptools.package-data]
whisper_plus = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

